CSS ID name adjustment

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ a:visited {
 }
 
  /* .familyComp */
- #edit-familycomp {
+ #edit-family-comp {
   float: left;
   border: 1px solid #cccccc;
   margin: 10px 0 0 1px;
